tests done and ready for delivery

--- a/src/styles/tasklist.scss
+++ b/src/styles/tasklist.scss
@@ -87,6 +87,7 @@ section.task-list {
 
           &.completed {
             p {
+              transition: transform 2s;
               text-decoration:line-through;
               opacity: 0.6;
             }
